<resources>
    <string name="app_name">BlueWorldCodingChallange</string>
    <string name="weather_icon">Weather icon</string>
    <string name="done">Done</string>
    <string name="city_name_hint">City name e.g. Berlin</string>
    <string name="set_location">Set location</string>
    <string name="visibility">Visibility</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels like</string>
    <string name="recent_locations">Recent locations</string>
    <string name="wind_value">%dM/S</string>
    <string name="pressure_value">%dHPA</string>
    <string name="visibility_value">%dKM</string>
    <string name="snowfall">Snowfall</string>
    <string name="search">Search</string>
</resources>
